wordpress.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: wordpress
  name: wordpress
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    name: wordpress
