ingress.yaml
# https://github.com/kubernetes/ingress/blob/master/examples/static-ip/gce/gce-static-ip-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: static-ip
  # Assumes a global static ip with the same name exists.
  # You can acquire a static IP by running
  # gcloud compute addresses create test-ip --global
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "test-ip"
    kubernetes.io/ingress.class: "gce"
spec:
  backend:
    # This assumes http-svc exists and routes to healthy endpoints.
    serviceName: wordpress
    servicePort: 80
